# agnostic-multi-agent

./: .gitignore  README.md  docker-compose.yml
.claude/: launch.json
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/adapters/: base.py  registry.py  rest_adapter.py  result.py
backend/app/core/: exceptions.py
backend/app/models/: __init__.py  agent.py  execution.py  workflow.py
backend/app/routers/: agents.py  executions.py  workflows.py
backend/app/schemas/: agent.py  execution.py  workflow.py
backend/app/services/: agent_service.py  condition_eval.py  dag_validator.py  event_bus.py  execution_service.py  health_service.py  workflow_service.py
backend/tests/: test_dag_validator.py  test_execution_sweep.py
docs/: agent-card-schema.md  architecture.md
docs/adr/: 0001-db-choice.md
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: agents.ts  client.ts  executions.ts  workflows.ts
frontend/src/hooks/: usePolling.ts  useSse.ts
frontend/src/pages/: AgentsPage.tsx  ExecutionDetailPage.tsx  ExecutionsListPage.tsx  WorkflowBuilderPage.tsx  WorkflowsListPage.tsx
frontend/src/types/: agent.ts  execution.ts  workflow.ts
scripts/: run_dev.md  seed_agents.py
stub_agents/: Dockerfile  pyproject.toml
stub_agents/agent_cards/: bsa.json  cam.json  fsr.json
stub_agents/bsa_stub/: main.py
stub_agents/cam_stub/: main.py
stub_agents/common/: canned.py
stub_agents/fsr_stub/: main.py
(+12 files in other folders)
