[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.2",
    "sqlmodel>=0.0.39",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "fastapi[standard]>=0.139.0",
    "pytest>=9.1.1",
]
